--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
   <body id="etusivu"> 
 
     <nav class="topnav" id="myTopnav"> 
+        <a href="tacticalboard.html" class="nav-link">Taktiikkataulu</a> </href>"
 
-    <a href="kuntosalietusivu.html" class="nav-link">Koti</a> 
+    <a href="index.html" class="nav-link">Koti</a> 
 
     <a href="hinnasto.html" class="nav-link">Hinnasto & Aukioloajat</a> 
 
