--- a/galleria.html
+++ b/galleria.html
@@ -16,9 +16,9 @@
 
   </head> 
 
-  <body><nav class="topnav" id="myTopnav"> 
+  <body> <nav class="topnav" id="myTopnav"> 
 
-    <a href="kuntosalietusivu.html" class="nav-link">Koti</a> 
+    <a href="index.html" class="nav-link">Koti</a> 
 
     <a href="hinnasto.html" class="nav-link">Hinnasto & Aukioloajat</a> 
 
