--- a/yhteystiedot.html
+++ b/yhteystiedot.html
@@ -18,7 +18,7 @@
 
   <body><nav class="topnav" id="myTopnav"> 
 
-    <a href="kuntosalietusivu.html" class="nav-link">Koti</a> 
+    <a href="index.html" class="nav-link">Koti</a> 
 
     <a href="hinnasto.html" class="nav-link">Hinnasto & Aukioloajat</a> 
 
