--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" /> 
 
-    <title>Kuntosali</title> 
+    <title>Taktiikkataulu</title> 
 
     <link href="tyyli.css" rel="stylesheet"/> 
 
@@ -19,9 +19,11 @@
   <body id="etusivu"> 
 
     <nav class="topnav" id="myTopnav"> 
-        <a href="tacticalboard.html" class="nav-link">Taktiikkataulu</a> </href>"
+        
 
     <a href="index.html" class="nav-link">Koti</a> 
+
+    <a href="tacticalboard.html" class="nav-link">Taktiikkataulu</a> </href>"
 
     <a href="hinnasto.html" class="nav-link">Hinnasto & Aukioloajat</a> 
 
