--- a/tacticalboard.html
+++ b/tacticalboard.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Salibandyn taktiikkataulu – demo</title>
+  <title>Taktiikkataulu</title>
   <!--
     Tämä versio toteuttaa pyydetyt muutokset:
     1) Polun piirron lopetus VÄLILYÖNNILLÄ (Space) – ei tuplaklikkausta.
