--- a/tacticalboard.html
+++ b/tacticalboard.html
@@ -481,5 +481,66 @@
   window.addEventListener('resize', fitStageIntoParent);
   fitStageIntoParent();
   </script>
+
+  <script> 
+
+    // Responsiivinen valikko 
+
+    function myFunction() { 
+
+        var x = document.getElementById("myTopnav"); 
+
+        if (x.className === "topnav") { 
+
+            x.className += " responsive"; 
+
+        } else { 
+
+            x.className = "topnav"; 
+
+        } 
+
+    } 
+
+ 
+
+    // Valikon "active"-luokan lisääminen sen perusteella, mikä sivu on auki 
+
+    window.onload = function() { 
+
+        // Haetaan nykyinen URL-polku 
+
+        var path = window.location.pathname; 
+
+        // Poimitaan nykyinen sivu (esim. "Koti.html") 
+
+        var currentPage = path.substring(path.lastIndexOf("/") + 1); 
+
+ 
+
+        // Haetaan kaikki valikon linkit 
+
+        var links = document.querySelectorAll('.nav-link'); 
+
+        links.forEach(function(link) { 
+
+            var href = link.getAttribute('href'); // Hakee linkin href-arvon 
+
+            if (href === currentPage) { 
+
+                link.classList.add('active'); // Lisää "active"-luokan oikealle linkille 
+
+            } else { 
+
+                link.classList.remove('active'); // Poistaa "active"-luokan muilta linkeiltä 
+
+            } 
+
+        }); 
+
+    } 
+
+</script> 
+
 </body>
 </html>
