--- a/tacticalboard.html
+++ b/tacticalboard.html
@@ -4,8 +4,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Taktiikkataulu</title>
  
-  <link rel="stylesheet" href="tyyli.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> 
+    <link href="css/tyyli.css" rel="stylesheet" />
+    <link rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
